<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="50" android:orientation="1" android:background="@drawable/houston" android:padding="30dp" android:fadingEdge="3000" android:layout_width="-1" android:layout_height="-1">
    <ScrollView android:layout_width="-1" android:layout_height="-2">
        <LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-2">
            <Button android:textColor="#ffffff" android:id="@id/video_button" android:background="@drawable/custon_button2" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/info" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/roster_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/roster_label" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/schedule_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="40dp" android:text="@string/schedule_label" android:height="50sp" />
            <Button android:textColor="#ffffff" android:id="@id/video_button" android:background="@drawable/custon_button2" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/video" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/espn_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/espn_label" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/texansvideo_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="40dp" android:text="@string/texansvideo_label" android:height="50sp" />
            <Button android:textColor="#ffffff" android:id="@id/audio_button" android:background="@drawable/custon_button2" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/audio" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/texanspod_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="40dp" android:text="Texans Podcast" android:height="50sp" />
            <Button android:textColor="#ffffff" android:id="@id/news_button" android:background="@drawable/custon_button2" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/news" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/texansnews_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/texansnews_label" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/chron_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/chron_label" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/khou_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/khou_label" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/pft_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/pft_label" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/nflnews_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/nflnews_label" android:height="50sp" />
            <Button android:textColor="@color/txblue" android:id="@id/about_button" android:background="@drawable/custom_button" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="15dp" android:text="@string/about_label" android:height="50sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
